--- a/Assignment1/SaadGondal.html
+++ b/Assignment1/SaadGondal.html
@@ -26,7 +26,7 @@
             <li class="current"><a href="index.html">Home</a></li>
            <li><a href="osama.html">Osama(Tech Lead)</a></li>
             <li><a href="SaadGondal.html">Saad(Group Lead)</a></li>
-            <li><a href="Lloyd.html">Lloyd (Software Engineer)</a></li>
+            <li><a href="Lloyd.html">Loly (Software Engineer)</a></li>
 		   <li><a href="ehsan.html">Ehsan (Developer)</a></li>
           </ul>
         </div><!--close menubar-->	
@@ -51,7 +51,18 @@
 
 			<br/>
 		<h6>Personal Statement</h6>
-			<p>Enter Your Biography</p>
+			<p>EXPERIENCE IN INFOGISTIC:
+        I worked in the department of Information Management & Security Services for the development of CloudClinik, an EMR and Practice Management solution for healthcare industry. I have an experience in the development, maintenance and support phases of SDLC. 
+
+ Technical skills gained:
+- Good hands on experience in LifeRay Portal Development.
+- Experience in implementation of Java/J2EE Technologies (JSF, PrimeFaces, Spring, Hibernate).
+- Hands on experience in DDL and DML in MySQL.
+- Skilled in Jasper Report design & development and integration with LifeRay Portal.
+
+Functional skills gained:
+- Entry level knowledge of Health Care business.
+- Ensuring work environment according to ISO27001 standard at personal level.</p>
           
 		</div><!--close content_item-->
       </div><!--close content-->   
